SONARIAC-1566 Docker parser should consider Exec form with characters behind as Shell form