@@ -19,8 +19,11 @@
  */
 package org.sonar.iac.docker.tree.impl;
 
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.sonar.iac.docker.TestUtils.assertArgumentsValue;
+
 import java.util.List;
-import java.util.stream.Collectors;
+
 import org.junit.jupiter.api.Test;
 import org.sonar.iac.docker.parser.grammar.DockerLexicalGrammar;
 import org.sonar.iac.docker.parser.utils.Assertions;
@@ -29,10 +32,6 @@ import org.sonar.iac.docker.tree.api.Argument;
 import org.sonar.iac.docker.tree.api.DockerTree;
 import org.sonar.iac.docker.tree.api.ExecForm;
 import org.sonar.iac.docker.tree.api.SyntaxToken;
-
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.sonar.iac.common.testing.IacCommonAssertions.assertThat;
-import static org.sonar.iac.docker.TestUtils.assertArgumentsValue;
 
 class ExecFormImplTest {
 
@@ -45,8 +44,6 @@ class ExecFormImplTest {
       .matches(" [\"/usr/bin/wc\",\"--help\"]")
       .matches(" [\"foo\" , \"bar\"]")
       .matches(" [ \"foo\", \"bar\" ]")
-      .matches(" [ \"foo\", \"bar\" ] garbage")
-      .matches(" [ \"foo\", \"bar\" ]garbage no space and multiple words")
       .matches("    [\"/usr/bin/wc\",\"--help\"]")
 
       .notMatches(" [abc]")
@@ -55,6 +52,8 @@ class ExecFormImplTest {
       .notMatches(" [\"la\", \"-bb]")
       .notMatches(" \"la\", \"-bb\"]")
       .notMatches(" [\"la\", \"-bb\",]")
+      .notMatches(" [ \"foo\", \"bar\" ] garbage")
+      .notMatches(" [ \"foo\", \"bar\" ]garbage no space and multiple words")
       .notMatches(" [ \"foo\", \"bar\" ] garbage\n on multiple lines")
       .notMatches("");
   }
@@ -76,7 +75,7 @@ class ExecFormImplTest {
           throw new RuntimeException("Invalid cast from " + t.getClass());
         }
       })
-      .collect(Collectors.toList());
+      .toList();
     assertThat(elementsAndSeparatorsAsText).containsExactly("executable", ",", "param1", ",", "param2");
 
     for (Argument argument : execForm.argumentsWithSeparators().elements()) {
@@ -95,13 +94,5 @@ class ExecFormImplTest {
     assertThat(execForm.argumentsWithSeparators().separators().stream().map(SyntaxToken::value)).containsExactly(",", ",");
 
     assertArgumentsValue(execForm.arguments(), "executable", "param1", "param2");
-  }
-
-  @Test
-  void shouldSupportGarbageAfterExecForm() {
-    ExecForm execForm = DockerTestUtils.parse(" [ \"foo\", \"bar\" ] garbage", DockerLexicalGrammar.EXEC_FORM);
-    assertThat(execForm.argumentsWithSeparators().elements()).hasSize(2);
-    assertThat(execForm.leftover().value()).isEqualTo("garbage");
-    assertThat(execForm.leftover().textRange()).hasRange(1, 18, 1, 25);
   }
 }
